--- a/index.html
+++ b/index.html
@@ -1,13 +1,73 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Patreon Link Complete</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background: #f7f8fa;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+
+        .container {
+            background: #fff;
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            padding: 30px 40px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            max-width: 400px;
+            width: 100%;
+        }
+
+        h1 {
+            color: #333;
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+
+        p {
+            color: #555;
+            font-size: 16px;
+            margin-bottom: 10px;
+        }
+
+        code {
+            display: inline-block;
+            padding: 10px 15px;
+            background: #f0f0f0;
+            border: 1px solid #ccc;
+            border-radius: 6px;
+            font-size: 14px;
+            word-wrap: break-word;
+            max-width: 100%;
+        }
+
+        @media (max-width: 500px) {
+            .container {
+                padding: 20px;
+                border-radius: 8px;
+            }
+
+            h1 {
+                font-size: 20px;
+            }
+        }
+    </style>
 </head>
 <body>
-    <h1>Almost Done!</h1>
-    <p>Copy this code and paste it into your game:</p>
-    <code id="auth-code"></code>
-    
+    <div class="container">
+        <h1>Almost Done!</h1>
+        <p>Copy this code and paste it into your game:</p>
+        <code id="auth-code">Loading...</code>
+    </div>
+
     <script>
         const urlParams = new URLSearchParams(window.location.search);
         const code = urlParams.get('code');
