--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         body {
             margin: 0;
             padding: 0;
-            background: #f7f8fa;
+            background: #FFCB61;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             display: flex;
             align-items: center;
@@ -16,47 +16,61 @@
         }
 
         .container {
-            background: #fff;
-            border: 1px solid #ddd;
-            border-radius: 10px;
+            background: #ffffff;
+            border: 2px solid #77BEF0;
+            border-radius: 12px;
             padding: 30px 40px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
             text-align: center;
             max-width: 400px;
-            width: 100%;
+            width: 90%;
         }
 
         h1 {
-            color: #333;
-            font-size: 24px;
-            margin-bottom: 20px;
+            color: #EA5B6F;
+            font-size: 26px;
+            margin-bottom: 15px;
         }
 
         p {
-            color: #555;
+            color: #333;
             font-size: 16px;
             margin-bottom: 10px;
         }
 
         code {
             display: inline-block;
-            padding: 10px 15px;
-            background: #f0f0f0;
-            border: 1px solid #ccc;
-            border-radius: 6px;
-            font-size: 14px;
-            word-wrap: break-word;
-            max-width: 100%;
+            padding: 12px 18px;
+            background: #F5F5F5;
+            border: 1px dashed #77BEF0;
+            border-radius: 8px;
+            font-size: 15px;
+            color: #222;
+            font-family: 'Courier New', Courier, monospace;
+            cursor: pointer;
+            transition: background 0.2s, border-color 0.2s;
+            user-select: all;
+        }
+
+        code:hover {
+            background: #e6f5fc;
+            border-color: #FF894F;
+        }
+
+        .note {
+            margin-top: 10px;
+            font-size: 12px;
+            color: #777;
         }
 
         @media (max-width: 500px) {
             .container {
                 padding: 20px;
-                border-radius: 8px;
+                border-radius: 10px;
             }
 
             h1 {
-                font-size: 20px;
+                font-size: 22px;
             }
         }
     </style>
@@ -65,13 +79,23 @@
     <div class="container">
         <h1>Almost Done!</h1>
         <p>Copy this code and paste it into your game:</p>
-        <code id="auth-code">Loading...</code>
+        <code id="auth-code" onclick="selectCode()">Loading...</code>
+        <div class="note">Click the code to auto-select it</div>
     </div>
 
     <script>
         const urlParams = new URLSearchParams(window.location.search);
         const code = urlParams.get('code');
-        document.getElementById('auth-code').textContent = code || 'No code found';
+        const codeEl = document.getElementById('auth-code');
+        codeEl.textContent = code || 'No code found';
+
+        function selectCode() {
+            const range = document.createRange();
+            range.selectNodeContents(codeEl);
+            const selection = window.getSelection();
+            selection.removeAllRanges();
+            selection.addRange(range);
+        }
     </script>
 </body>
 </html>
