--- a/index.html
+++ b/index.html
@@ -1,101 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Patreon Link Complete</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background: #FFCB61;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
+  <meta charset="UTF-8" />
+  <title>Patreon Link Complete</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: #f7f8fa;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
 
-        .container {
-            background: #ffffff;
-            border: 2px solid #77BEF0;
-            border-radius: 12px;
-            padding: 30px 40px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            max-width: 400px;
-            width: 90%;
-        }
+    .ticket-card {
+      background: #ffffff;
+      border-radius: 16px;
+      box-shadow: 0 12px 24px rgba(0, 0, 0, 0.08);
+      padding: 30px 40px;
+      max-width: 400px;
+      width: 90%;
+      text-align: center;
+      position: relative;
+    }
 
-        h1 {
-            color: #EA5B6F;
-            font-size: 26px;
-            margin-bottom: 15px;
-        }
+    .emoji {
+      font-size: 40px;
+      margin-bottom: 10px;
+    }
 
-        p {
-            color: #333;
-            font-size: 16px;
-            margin-bottom: 10px;
-        }
+    h1 {
+      color: #333;
+      font-size: 24px;
+      margin-bottom: 6px;
+    }
 
-        code {
-            display: inline-block;
-            padding: 12px 18px;
-            background: #F5F5F5;
-            border: 1px dashed #77BEF0;
-            border-radius: 8px;
-            font-size: 15px;
-            color: #222;
-            font-family: 'Courier New', Courier, monospace;
-            cursor: pointer;
-            transition: background 0.2s, border-color 0.2s;
-            user-select: all;
-        }
+    p {
+      color: #666;
+      font-size: 15px;
+      margin-bottom: 20px;
+    }
 
-        code:hover {
-            background: #e6f5fc;
-            border-color: #FF894F;
-        }
+    code {
+      display: inline-block;
+      padding: 12px 18px;
+      background: #f5f5f5;
+      border: 1px dashed #77BEF0;
+      border-radius: 8px;
+      font-size: 15px;
+      color: #222;
+      font-family: 'Courier New', Courier, monospace;
+      cursor: pointer;
+      transition: background 0.2s, border-color 0.2s;
+      user-select: all;
+    }
 
-        .note {
-            margin-top: 10px;
-            font-size: 12px;
-            color: #777;
-        }
+    code:hover {
+      background: #e6f5fc;
+      border-color: #FF894F;
+    }
 
-        @media (max-width: 500px) {
-            .container {
-                padding: 20px;
-                border-radius: 10px;
-            }
+    .note {
+      margin-top: 10px;
+      font-size: 12px;
+      color: #777;
+    }
 
-            h1 {
-                font-size: 22px;
-            }
-        }
-    </style>
+    @media (max-width: 500px) {
+      .ticket-card {
+        padding: 20px;
+        border-radius: 12px;
+      }
+
+      h1 {
+        font-size: 20px;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Almost Done!</h1>
-        <p>Copy this code and paste it into your game:</p>
-        <code id="auth-code" onclick="selectCode()">Loading...</code>
-        <div class="note">Click the code to auto-select it</div>
-    </div>
+  <div class="ticket-card">
+    <div class="emoji">🎉</div>
+    <h1>Thank you!</h1>
+    <p>Your code has been generated successfully</p>
+    <code id="auth-code" onclick="selectCode()">Loading...</code>
+    <div class="note">Click the code to auto-select it</div>
+  </div>
 
-    <script>
-        const urlParams = new URLSearchParams(window.location.search);
-        const code = urlParams.get('code');
-        const codeEl = document.getElementById('auth-code');
-        codeEl.textContent = code || 'No code found';
+  <script>
+    const urlParams = new URLSearchParams(window.location.search);
+    const code = urlParams.get('code');
+    const codeEl = document.getElementById('auth-code');
+    codeEl.textContent = code || 'No code found';
 
-        function selectCode() {
-            const range = document.createRange();
-            range.selectNodeContents(codeEl);
-            const selection = window.getSelection();
-            selection.removeAllRanges();
-            selection.addRange(range);
-        }
-    </script>
+    function selectCode() {
+      const range = document.createRange();
+      range.selectNodeContents(codeEl);
+      const selection = window.getSelection();
+      selection.removeAllRanges();
+      selection.addRange(range);
+    }
+  </script>
 </body>
 </html>
